# rad_youbot_stack

./: README.md  notes.txt
bumper_kilt/: CMakeLists.txt  package.xml
bumper_kilt/scripts/: run_kilt.py
bumper_kilt/src/: bumper_kilt.cpp
youbot_applications/diagnostics_tool/: CMakeLists.txt  diagnose.dgs  youBot_DiagnosticsTool
youbot_applications/hello_world_demo/: CMakeLists.txt
youbot_applications/joypad_control/: CMakeLists.txt  start_joypad_app  youBot_JoypadControl
youbot_applications/keyboard_remote_control/: CMakeLists.txt  youBot_KeyboardRemoteControl
youbot_applications/keyboard_remote_control/config/: applications.cfg
youbot_description/robots/: robot_description  youbot.urdf.xacro  youbot_with_cam3d.urdf.xacro
youbot_description/urdf/youbot_gripper/: gripper.urdf.xacro
youbot_driver_ros_interface/: CMakeLists.txt
youbot_driver_ros_interface/launch/: youbot_driver.launch  youbot_keyboard.launch
youbot_driver_ros_interface/src/: YouBotOODLWrapper.cpp
youbot_driver_ros_interface/src/examples/: moveit_commander_cmdline.py  youbot_keyboard_arm_teleop.py
youbot_moveit_config/: .setup_assistant  package.xml
youbot_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  youbot.srdf
youbot_moveit_config/launch/: demo.launch  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  trajectory_execution.launch.xml  youbot_moveit_controller_manager.launch.xml  youbot_moveit_sensor_manager.launch.xml
youbot_moveit_manipulation/: CMakeLists.txt  package.xml
youbot_moveit_manipulation/demos/: CMakeLists.txt
youbot_moveit_manipulation/demos/launch/: motion_demo.launch
youbot_moveit_manipulation/demos/src/: motion_demo.cpp
youbot_moveit_manipulation/kinematics/: CMakeLists.txt
youbot_moveit_manipulation/kinematics/launch/: kinematics_tutorial.launch
youbot_moveit_manipulation/kinematics/src/: kinematics_tutorial.cpp
youbot_moveit_manipulation/planning/: CMakeLists.txt
youbot_moveit_manipulation/planning/launch/: motion_planning_api_tutorial.launch  move_group_interface_tutorial.launch  planning_scene_tutorial.launch
youbot_moveit_manipulation/planning/src/: motion_planning_api_tutorial.cpp  move_group_interface_tutorial.cpp  planning_scene_tutorial.cpp
youbot_navigation/youbot_navigation_common/config/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
youbot_navigation/youbot_navigation_common/launch/: base_front_hokuyo_node.launch  bringup_global_navigation.launch  bringup_local_navigation.launch  bringup_move_base.launch  bringup_navigation.launch  bringup_navigation.launch.back  bringup_navigation.launch.nsback  bringup_navigation_nomovebase.launch  bringup_sensing.launch  prepare_youbot.launch  prepare_youbot_amcl.launch  prepare_youbot_movebase.launch  prepare_youbot_neither.launch
youbot_navigation/youbot_navigation_common/src/: lowpass_filter.cpp
youbot_navigation/youbot_navigation_global/: CMakeLists.txt  costmap_plugins.xml  package.xml
youbot_navigation/youbot_navigation_global/config/: global_costmap_params.yaml  local_costmap_params.yaml
youbot_navigation/youbot_navigation_global/include/simple_map/: outer_layer.h
youbot_navigation/youbot_navigation_global/launch/: 2dslam.launch  amcl.launch  amcl.launch.back  amcl.launch.nsback  move_base_global.launch
youbot_navigation/youbot_navigation_global/map/: InspaceFull-CropNew.pgm  InspaceFull-CropNew.yaml  InspaceFull-Empty.pgm  InspaceFull-Empty.yaml  InspaceFull.pgm  InspaceFull.yaml  InspaceFullClean-Crop.pgm  InspaceFullClean-Crop.yaml  InspaceFullClean.pgm  InspaceFullClean.yaml  lab3.pgm  lab3.yaml  labnew1.pgm  labnew1.yaml
youbot_navigation/youbot_navigation_global/msg/: AgentPredictions.msg  InteractivePrediction.msg
youbot_navigation/youbot_navigation_global/params/: iros.yaml  minimal.yaml
youbot_navigation/youbot_navigation_global/src/: outer_layer.cpp  outer_test_pub.cpp
youbot_navigation/youbot_navigation_local/: CMakeLists.txt  costmap_plugins.xml  package.xml
youbot_navigation/youbot_navigation_local/config/: local_costmap_params.yaml
youbot_navigation/youbot_navigation_local/include/rad_layer/: AgentsLayer.h  HindsightLayer.h  agents_layer.h  foresight_layer.h
youbot_navigation/youbot_navigation_local/include/simple_map/: grid_layer.h  outer_layer.h  simple_layer.h
youbot_navigation/youbot_navigation_local/launch/: move_base_local.launch
youbot_navigation/youbot_navigation_local/params/: iros.yaml  minimal.yaml
youbot_navigation/youbot_navigation_local/src/: AgentsLayer.cpp  AgentsPub.cpp  HindsightLayer.cpp  agents_layer.cpp  foresight_layer.cpp  grid_layer.cpp  outer_layer.cpp  outer_test_pub.cpp  simple_layer.cpp
youbot_simulation/youbot_gazebo_robot/launch/: youbot.launch
youbot_simulation/youbot_gazebo_worlds/launch/: picknplace.launch
youbot_simulation/youbot_gazebo_worlds/urdf/: picknplace.urdf
