<?xml version="1.0"?>
<package>
  <name>bumper_kilt</name>
  <version>0.0.0</version>
  <maintainer email="n.nardelli@sms.ed.ac.uk">Nantas Nardelli</maintainer>
  <license>MIT</license>
  <description>
    Interface via serial port for custom built bumper ring.
  </description>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serial</run_depend>
</package>
